# minecraft-web

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  RBAC_IMPLEMENTATION_STATUS.md  RBAC_README.md  RBAC_SETUP_COMPLETE.md  README.md  RUNBOOK.md  amzcraft (1).html  amzcraft-admin.html  create_admin.sql  create_admin_user.py  debug_admin_auth.py  docker-compose.prod.yml  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  test_api.py  test_rbac.py
apps/api/: Dockerfile  README.md  alembic.ini  manage.py  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 202406150020_widen_news_summary.py  202406150021_widen_url_and_subtitle_columns.py  202407060001_create_users_and_audits.py  202407060002_add_content_models.py  202407060003_seed_pinned_rule.py  202407060004_add_payment_tables.py  202407060005_seed_rank_products.py  202407060006_enhance_news_model.py  202407060007_rename_metadata_to_meta_data.py  (+12 more)
apps/api/amzcraft_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/app/: __init__.py  main.py
apps/api/tests/: conftest.py  test_admin_diagnostics.py  test_admin_media.py  test_admin_rbac.py  test_admin_routes.py  test_auth_routes.py  test_auth_service.py  test_health.py  test_minecraft_poller.py  test_payment_idempotency.py  test_payments.py  test_public_routes.py  test_rate_limiting.py  test_security.py  test_social_api.py  test_status_poller.py  test_users_endpoint.py  test_websocket.py  test_websocket_manager.py
apps/worker/: Dockerfile  README.md  pyproject.toml
apps/worker/amzcraft_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/worker/tests/: test_expiry_jobs.py  test_rcon_service.py  test_sync_vote_top.py  test_worker.py
apps/worker/worker/: __init__.py  config.py  database.py  main.py  models.py  rcon_service.py  services.py
(+332 files in other folders)
