[project]
name = "amzcraft-api"
version = "0.1.0"
description = "FastAPI service for the monorepo"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Amzcraft" }]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "alembic>=1.13.1",
  "asyncpg>=0.29.0",
  "pydantic[email]>=2.7.0",
  "pydantic-settings>=2.2.1",
  "python-jose>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "redis>=5.0.4",
  "httpx>=0.27.0",
  "structlog>=24.1.0",
  "websockets>=12.0",
  "rcon>=1.6.6",
  "backoff>=2.2.1",
  "bleach>=6.0.0",
  "python-magic>=0.4.27",
  "python-multipart>=0.0.6",
  "bcrypt>=4.0.0",
  "click>=8.0.0"
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20.0",
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.6",
  "ruff>=0.5.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "tests*"]
