[project]
name = "amzcraft-worker"
version = "0.1.0"
description = "Asynchronous background worker for the monorepo"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Amzcraft" }]
dependencies = [
  "asyncpg>=0.29.0",
  "backoff>=2.2.1",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "redis>=5.0.4",
  "rcon>=1.6.6",
  "sqlalchemy[asyncio]>=2.0.30",
  "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.6",
  "ruff>=0.5.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["worker*", "tests*"]
